move email criteria to a parameter for show_title slides.

--- a/dj/main/templates/title_slides.html
+++ b/dj/main/templates/title_slides.html
@@ -8,8 +8,9 @@
 {% block content %}
 
 {% for episode in episodes %}
+<a href="{{episode.conf_url}}">{{episode.conf_url}}</a><br/>
   <a href="E/{{episode.id}}/"><img src="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/titles/{{episode.slug}}.png" width="720"></a><br/>
   <hr>
-
 {% endfor %}
+
 {% endblock %}
