--- a/dj/main/templates/show_shortcuts.html
+++ b/dj/main/templates/show_shortcuts.html
@@ -2,4 +2,5 @@
 <td><a href="{% url pdfs 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a></td>
 <td><a href="{% url schedule show.id show.slug %}">schedule</a></td> 
 <td><a href="{% url pdfs 'title_slides' show.id %}">title slides</a></td>
+<td><a href="{% url pdfs 'volunteer_signup' show.id %}{{show.slug}}_volunteer_signup.pdf">volunteer_signup.pdf</a></td>
 <td><a href="{% url show_anomalies show.id %}" title="{{show.name}}">anomalies</a></td>
