add title attribute to column heading abbreviations.

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -28,15 +28,15 @@ Episode Count: {{episodes.count}}
         <th>loc name</th>
         <th>start</th><th>end</th>
         <th>duration</th>
-        <th>state</th>
+        <th title="1:Edit">state</th>
         <th>episode.name</th>
         <th>episode.authors</th>
-        <th>cmt</th>
-        <th>rel</th>
-        <th>img</th>
-        <th>rf</th>
-        <th>host</th>
-        <th>index</th>
+        <th title="comment size">cmt</th>
+        <th title="Released">rel</th>
+        <th title="Image Count (recording sheets)">img</th>
+        <th title="Raw Files found">rf</th>
+        <th title="video is hosted">host</th>
+        <th title="host is indexed">index</th>
       </tr>
     </thead>
 
