page of Recording Sheet images that are not attached to an Episode.

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -13,6 +13,7 @@
     <td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td>
 <td><a href="{% url overlaping_files show.id %}">overlaping_fles</a></td>
 <td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td>
+<td><a href="{% url orphan_img show.id %}">orphan_img</a></td>
 </tr>
 <tr>
 <td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td>
