--- a/dj/main/templates/title_slides.html
+++ b/dj/main/templates/title_slides.html
@@ -1,8 +1,8 @@
-{# show.html #}
+{# title_slides.html #}
 {% extends "base.html" %}
 
 {% block head %}
-  <title>veyepar - Show: {{client.name}} {{show.name}} </title>
+  <title>veyepar - Titles for Show: {{client.name}} {{show.name}} </title>
 {% endblock %}
 
 {% block content %}
