--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -146,6 +146,9 @@ $(".viewer").zoomer();
   <div class="panel-title"></div> 
   <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#{{cl.id}}"> {{cl.raw_file.filename}}</a>
   {{cl.raw_file.start|date:"H:i:s"}} - {{cl.raw_file.end|date:"H:i:s"}}
+
+  {% if clrfform.start.value %} (Start: {{ clrfform.start.value }}){% endif %} 
+  {% if clrfform.end.value %} (End: {{ clrfform.end.value }}){% endif %} 
   {{ clrfform.apply.label_tag }}{{ clrfform.apply }}
 
   <div class="panel-collapse collapse" id="{{cl.id}}">
@@ -234,7 +237,8 @@ $(".viewer").zoomer();
     </div> <!-- /panel-body -->
   </div> <!-- /panel-collapse -->
 
-  <img id="audio_image_{{cl.id}}" alt="audio" 
+ {% if episode.show.slug == "fosdem_2014" %}
+  <img id="audio_image_{{cl.id}}" alt="audio viz" 
 src ="{{MEDIA_URL}}/{{cl.raw_file.show.client.slug}}/{{cl.raw_file.show.slug}}/audio_png/dv/{{cl.raw_file.location.slug}}/{{cl.raw_file.basename}}_audio.png">
 
   {% with forloop.counter0 as x %}
@@ -266,6 +270,7 @@ src ="{{MEDIA_URL}}/{{cl.raw_file.show.client.slug}}/{{cl.raw_file.show.slug}}/a
 
     </script>
   {% endwith %}
+ {% endif %}
 
 
 </div> <!-- /panel -->
