--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -238,7 +238,8 @@ $(".viewer").zoomer();
     </div> <!-- /panel-body -->
   </div> <!-- /panel-collapse -->
 
- {% if episode.show.slug == "fosdem_2014" %}
+ {# % if episode.show.slug == "fosdem_2014" % #}
+ {% if episode.id == 8612 %}
   <img id="audio_image_{{cl.id}}" alt="audio viz" 
 src ="{{MEDIA_URL}}/{{cl.raw_file.show.client.slug}}/{{cl.raw_file.show.slug}}/audio_png/dv/{{cl.raw_file.location.slug}}/{{cl.raw_file.basename}}_audio.png">
 
