table headers now filter to items that have a value in that column.

--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -31,11 +31,11 @@ Episode Count: {{episodes.count}}
         <th title="1:Edit">state</th>
         <th>episode.name</th>
         <th>episode.authors</th>
-        <th title="email">e</th>
-        <th title="comment size">cmt</th>
-        <th title="Released">rel</th>
-        <th title="Image Count (recording sheets)">img</th>
-        <th title="Raw Files found">rf</th>
+        <th title="email"><a href="?emails=1">e</a></th>
+        <th title="comment size"><a href="?comment=1">cmt</a></th>
+        <th title="Released"><a href="?released=1">rel</a></th>
+        <th title="Image Count (sheets)"><a href="?images=1">img</a></th>
+        <th title="cuts"><a href="?cuts=1">rf</a></th>
         <th title="video is hosted">host</th>
         <th title="host is indexed">index</th>
       </tr>
