--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -113,7 +113,7 @@ Admin: <a href="{% url admin:main_episode_change episode.id%}">episode</a>
 
 <input type="submit" value="Save" />
 
-<div id="sheets" />
+<div id="sheets">
 {% if episode.image_file_set.all %}
 <div class="viewer" style="height: 200px; width: 800px;" >
 {% for img in episode.image_file_set.all %}
@@ -173,11 +173,11 @@ $(".viewer").zoomer();
           {% else %}
               src="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.ogv"
           {% endif %}
-          controls="always"
-          preload="none"
+          controls
+          preload="metadata"
           {# width=200 #}
           {# poster="{{MEDIA_URL}}/{{client.slug}}/{{show.slug}}/dv/{{location.slug}}/{{cl.raw_file.basename}}.png" #}
-          />
+          ></video>
       </td>
 
       <td>
