--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -38,15 +38,13 @@
       <td> <a href="/admin/">admin</a> </td>
       <td> <a href="/main/">main</a> </td>
       <td> <a href="/main/clients/">Clients</a> </td>
-      <td> <a href="http://validator.w3.org/check?uri={{request.META.HTTP_HOST}}{{request.get_full_path}}">val</a></td>
-      <td> <a href="http://validator.w3.org/check?uri=http://veyepar.nextdayvideo.com{{request.get_full_path}}">val</a></td>
-      <td>
       {% if request.META.HTTP_HOST == "localhost:8080" %}
-        <a href="http://veyepar.nextdayvideo.com{{request.get_full_path}}">prod</a>
+        <td> <a href="http://validator.w3.org/check?uri=http://veyepar.nextdayvideo.com{{request.get_full_path}}">val</a></td>
+        <td><a href="http://veyepar.nextdayvideo.com{{request.get_full_path}}">prod</a> </td>
       {% else %}
-        <a href="http://localhost:8080{{request.get_full_path}}">dev</a>
+        <td> <a href="http://validator.w3.org/check?uri={{request.META.HTTP_HOST}}{{request.get_full_path}}">val</a></td>
+        <td> <a href="http://localhost:8080{{request.get_full_path}}">dev</a> </td>
       {% endif %}
-      </td>
     </tr>
     </tbody>
   </table>
