--- a/dj/main/templates/overlaping_episodes.html
+++ b/dj/main/templates/overlaping_episodes.html
@@ -10,10 +10,10 @@
         {% for episode in episodes %}
             <tr class=row{{ forloop.counter0|divisibleby:2|yesno:"1,2"}}>
                 <td><a href="/admin/main/episode/{{episode.id}}/">{{episode.id}}</a><td>
-            <td>{{episode.sequence}}</td>
 <td style="padding-left: {{episode.start_px}}px;">
 <div style="background: black;width:{{episode.width_px}}">.</div></td>
             <td>{{episode.start|date:"D b d H:i"}} - {{episode.end|date:"H:i"}}</td>
+            <td>{{episode.duration}}</td>
             <td>{{episode.location}}</td>
             <td><a href="E/{{episode.id}}/">{{ episode.name }}</a></td>
             </tr>
