add talk_intro checklist for session chairs.

--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -15,11 +15,18 @@
 <td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td>
 <td><a href="{% url orphan_img show.id %}">orphan_img</a></td>
 </tr>
+
 <tr>
-<td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td>
-<td><a href="{{show.schedule_url}}">{{show.schedule_url}}</a></td></tr>
-<td><a href="{% url pdfs 'release_agreements' show.id %}{{show.slug}}_release.pdf">release.pdf</a></td>
+<td><a href="{{show.schedule_url}}">{{show.schedule_url}}</a></td>
 <td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td>
+<td><a href="{% url final_file_audio %}?show_id={{show.id}}">final_file_audio</a></td>
+</tr>
+
+<tr>
+<td><a href="{% url pdfs 'talk_intro' show.id %}{{show.slug}}_talk_intro.pdf">talk_intro.pdf</a></td>
+<td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td>
+<td><a href="{% url pdfs 'release_agreements' show.id %}{{show.slug}}_release.pdf">release.pdf</a></td>
+
 <td><a href="{% url meet_ann show.id %}">meeting announcement</a></td>
 </tr>
 <tr>{% include "show_shortcuts.html" %}</tr>
